force-app/main/default/objects/Rates__c/Rates__c.object-meta.xml
<CustomObject>
    <label>Rates</label>
    <nameField>
        <label>Rates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>