force-app/main/default/objects/Rates__c/fields/Currencies__c.field-meta.xml
<CustomField>
    <fullName>Currencies__c</fullName>
    <label>Currencies</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>MXN</fullName>
            </value>
            <value>
                <fullName>BRL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>