force-app/main/default/objects/Rates__c/fields/FXAUDCAD__c.field-meta.xml
<CustomField>
    <fullName>FXAUDCAD__c</fullName>
    <description>Rate of exchange between AUD and CAD.</description>
    <inlineHelpText>Rate from AUD to CAD.</inlineHelpText>
    <label>AUD to CAD</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>