force-app/main/default/objects/Rates__c/fields/FXCADAUD__c.field-meta.xml
<CustomField>
    <fullName>FXCADAUD__c</fullName>
    <description>Rate of exchange between CAD and AUD.</description>
    <inlineHelpText>Rate from CAD to AUD</inlineHelpText>
    <label>CAD to AUD</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>