force-app/main/default/objects/Rates__c/fields/FXCADEUR__c.field-meta.xml
<CustomField>
    <fullName>FXCADEUR__c</fullName>
    <description>Rate of exchange between CAD and EUR.</description>
    <label>CAD to EUR</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>