force-app/main/default/objects/Rates__c/fields/FXCADMXN__c.field-meta.xml
<CustomField>
    <fullName>FXCADMXN__c</fullName>
    <description>Rate of exchange between AUD and CAD.</description>
    <inlineHelpText>Rate from CAD to MXN</inlineHelpText>
    <label>CAD to MXN</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>