force-app/main/default/objects/Rates__c/fields/FXCADUSD__c.field-meta.xml
<CustomField>
    <fullName>FXCADUSD__c</fullName>
    <description>Rate of exchange between CAD and USD.</description>
    <inlineHelpText>Rate from CAD to USD.</inlineHelpText>
    <label>CAD to USD</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>