force-app/main/default/objects/Rates__c/fields/FXEURCAD__c.field-meta.xml
<CustomField>
    <fullName>FXEURCAD__c</fullName>
    <description>Rate of exchange between EUR and CAD.</description>
    <inlineHelpText>Rate from EUR to CAD.</inlineHelpText>
    <label>EUR to CAD</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>