force-app/main/default/objects/Rates__c/fields/FXMXNCAD__c.field-meta.xml
<CustomField>
    <fullName>FXMXNCAD__c</fullName>
    <description>Rate of exchange between MXN and CAD.</description>
    <inlineHelpText>Rate from MXN to CAD.</inlineHelpText>
    <label>MXN to CAD</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>