force-app/main/default/objects/Rates__c/fields/FXUSDCAD__c.field-meta.xml
<CustomField>
    <fullName>FXUSDCAD__c</fullName>
    <description>Rate of conversion between USD and CAD.</description>
    <label>USD to CAD</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>