force-app/main/default/objects/Rates__c/fields/LastUpdated__c.field-meta.xml
<CustomField>
    <fullName>LastUpdated__c</fullName>
    <label>LastUpdated</label>
    <type>Date</type>
</CustomField>